versioned_docs/version-0.11/getting-started.mdx
---
title: Install and Configure 
description: In this guide, we'll go over the setup you need to get started with using Development Environments.
sidebar_label: Install and Configure
id: getting-started
---

import Image from '@theme/Image';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Okteto's Development Environments enable you to work directly with a deployed application and see your code changes live on the cloud as soon as you hit save.

These Dev environments work using a combination of [Okteto Cloud](cloud.mdx), which is used to deploy your application, and [Okteto CLI](cloud/okteto-cli.mdx), which is used to launch the Dev Environment. This guide will teach how to get started with remote Development Environments.

## Installing Okteto CLI

Install the Okteto CLI following these steps:

### MacOS / Linux

```console
$ curl https://get.okteto.com -sSfL | sh
```

You can also install it via [brew](https://brew.sh/) by running:

```console
$ brew install okteto
```

### Windows

Download https://downloads.okteto.com/cli/stable/okteto.exe and add it to your `$PATH`.

You can also install it via [scoop](https://scoop.sh/) by running:

```console
$ scoop install okteto
```

### GitHub

Alternatively, you can directly download the binary [from GitHub](https://github.com/okteto/okteto/releases) or build it directly from the source code.

## Configuring Okteto CLI with Okteto Cloud

You can launch a remote Development Environment on [Okteto Cloud](https://cloud.okteto.com) or **any** Kubernetes cluster with the Okteto CLI. For this guide, we'll be using Okteto Cloud. 

The first thing you need to do is configure Okteto CLI to use Okteto Cloud. To do this, run the command below:

```console
$ okteto context use https://cloud.okteto.com
```

You can confirm that your CLI is configured by running the command below:

```console
$ okteto context list
```
```console
Name                        Namespace             Builder                                 Registry
https://cloud.okteto.com *  cindylopez          tcp://buildkit.cloud.okteto.net:1234    registry.cloud.okteto.net
```

## Getting Your Application Ready

For Okteto CLI to know how to launch your Development Environment, it needs an [Okteto manifest](cloud/okteto-cli.mdx#okteto-manifest). This manifest allows you to provide configuration for your Development Environments. Okteto CLI will analyze any [existing manifests](cloud/okteto-cli.mdx#deployment-manifests) (Helm, Kubernetes, etc.) in your source code directory and help you write an Okteto manifest for your application. The Okteto manifest is necessary in all cases except if you already have a Docker compose file configured for your application.

If Okteto CLI can't find the Okteto manifest for your application, the manifest generation step will happen automatically when we launch our Development Environment. You can also choose to explicitly generate the Okteto manifest using: 

```console
$ okteto init
```

Once the Okteto manifest is created, we recommend that you review it and adjust the different commands as needed. You can learn more about the manifest [here](reference/manifest.mdx).

## Next Steps

In this section, we installed Okteto CLI on our machine and configured it to work with Okteto Cloud. [Next](using-dev-envs.mdx), we're going to launch our Dev Environment and fix a bug in a sample application.